# openTVM

./: .gitignore  LICENSE  README.md
src/spark_vm/: CMakeLists.txt  main.cpp
src/spark_vm/spark/Heap/: pairingheap.h
src/spark_vm/spark/cpu/arm/: arm.h
src/spark_vm/spark/cpu/x86/: x86.h
src/spark_vm/spark/interpreter/: readBuffer.c  readBuffer.h
src/spark_vm/spark/memory/: alloc.h  arena.h  chunk.c  chunk.h  chunk_mmap.h  dev_alloc.c  dev_alloc.h  enviroment_memory.h  m_bitmap.c  m_bitmap.h  os.h  pages.c  pages.h  pairing_heap.h  ph.c  ph.h  pheap.h  rbt.h  redblackt.h  rtree.c  rtree.h  thalloc.c  thalloc.h  umalloc.h
src/spark_vm/spark/service/: globalDefenitions.h
src/spark_vm/spark/service/logger/: logger.h  loggerTime.h
src/spark_vm/spark/share/global/: globalDefenitions.h
src/spark_vm/spark/share/oops/: Klass.h
src/spark_vm/spark/share/runtime/: os.cpp  os.h
src/spark_vm/spark/share/services/bytecode/: bytecodeStream.cpp  bytecodeStream.h
src/spark_vm/spark/share/services/logger/: loggerTime.h
src/spark_vm/spark/share/services/memory/: frame.h  metaObject.cpp  metaObject.h
src/spark_vm/spark/share/types/: integralTypes.h
src/spark_vm/spark/share/utilities/: BytecodeFileReader.cpp  BytecodeFileReader.h  Lock.cpp  Lock.h  accessFlags.cpp  accessFlags.h  bitmask.h  bloomfilter.h  bloomhash.h
src/spark_vm/spark/share/utilities/compression/: zstd_decompression.cpp  zstd_decompression.h
src/spark_vm/spark/share/utilities/hash/: City.cpp  xxhash.h
src/spark_vm/spark/share/utilities/hash/unordered/: CustomHash.cpp  CustomHash.h  th_hash.c  th_hash.h  wyhash.h
src/spark_vm/spark/share/utilities/read/: BytecodeFileReader.cpp  BytecodeFileReader.h
src/spark_vm/spark/theia.core/code/: compiledCode.h
src/spark_vm/spark/theia.core/share/: s_ti.h  s_tni.h
src/spark_vm/spark/theia.core/unix/: tni.h
src/spark_vm/spark/theia.core/win/: tni.h
src/spark_vm/test/: LogDuration.h
